this is my second commit.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="row nav-row">
 					<!-- Pet Logo -->
 					<div class="col col-md-8">
-						<img src="/img/petstore_logo.png" class="img-fluid pet-logo">
+						<img src="img/petstore_logo.png" class="img-fluid pet-logo">
 						<h3 class="navbar-text">Pet Store</h3>
 					</div>
 					<div class="col col-md-4">
@@ -61,14 +61,14 @@
 		
 	<div class="col col-md-6">
 		<div class="col col-md-11 feature-container">
-			<img class="product-img img-fluid" src="/img/doctor1.jpg">
+			<img class="product-img img-fluid" src="img/doctor1.jpg">
 			<h4>Dr. Joe Smith</h4>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptatem praesentium itaque impedit quia ea dignissimos, sunt assumenda perferendis, illum dolore perspiciatis id sapiente culpa magnam rem reprehenderit quis! Expedita?
 			</p>
 		</div>
 		
 		<div class="col col-md-11 feature-container">
-				<img class="product-img img-fluid" src="/img/doctor2.jpg">
+				<img class="product-img img-fluid" src="img/doctor2.jpg">
 				<h4>Dr. Jane Smith</h4>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptatem praesentium itaque impedit quia ea dignissimos, sunt assumenda perferendis, illum dolore perspiciatis id sapiente culpa magnam rem reprehenderit quis! Expedita?
 		</div>
@@ -118,8 +118,8 @@
 	<div class="col col-md-4">
 
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12790.416957247213!2d-119.785777!3d36.732065!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1567564996904!5m2!1sen!2sus" width="360" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-					<img class="product-img1" src="/img/cat.jpg" class="img-fluid pet-logo">
-					<img class="product-img2" src="/img/dog.jpg" class="img-fluid pet-logo">
+					<img class="product-img1" src="img/cat.jpg" class="img-fluid pet-logo">
+					<img class="product-img2" src="img/dog.jpg" class="img-fluid pet-logo">
 
 			</div>
 
@@ -140,7 +140,7 @@
 	<div class="row footer">
 			<div class="col-12">
 				<div class="col col-md-3">
-					<img class= "img-fluid pet-logo-footer" src="/img/petstore_logo.png">
+					<img class= "img-fluid pet-logo-footer" src="img/petstore_logo.png">
 				</div>
 	
 				<div class="col1 col-md-1">
